upgrade java to version 21 & upgrade depedencies & minor fixes (#314)
- update all java depedencies to actual ones
- upgrade java to v21
- questions metadata repository refactoring
- other minor fixes